--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,6 @@
 <html>
   <head>
     <title>Hello React</title>
-		<script src="http://fb.me/react-0.12.2.js"></script>
-		<script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
 		<script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
 		<link rel="stylesheet" href="style.css" />
   </head>
@@ -11,6 +9,6 @@
     <div id="content"></div>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-		<script type="text/jsx" src="main.jsx"></script>
+		<script src="bundle.js"></script>
   </body>
 </html>
