added login page and styling

--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,30 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Hello React</title>
-		<script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
-		<link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="content"></div>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-		<script src="bundle.js"></script>
-  </body>
+<head>
+  <title>Hello React</title>
+  <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="content"></div>
+  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="bundle.js"></script>
+</body>
+<!-- <body>
+
+  <div id = 'loginform' onclick="login()">login</div>
+
+  <script>
+  function login(){
+    // $.post('login',{user: '', password: ''},(res)=>{
+    //   if(res==='success'){
+    //     location='login.html';
+    //   }
+    // });
+  }
+
+  </script>
+</body> -->
 </html>
